--- a/sass.scss
+++ b/sass.scss
@@ -22,19 +22,56 @@ body::before {
     bottom: 0;
     z-index: 1;
 }
+iframe {
+    display: none;
+}
+
 #columns {
     padding-bottom: 100px;
 }
 .ytd-seo-panels {
     position: fixed;
-    bottom: 0;
-    left: 0;
+    top: 0;
     right: 0;
     background: #fff;
     border: 1px solid #ccc;
-    width: 100%;
-    height: 100px;
-    font-size: 13px;
-    padding: 10px;
-    z-index: 2;
+    z-index: 999999;
+    .ytd-seo-panels-container {
+        max-width: 666px;
+        margin: 0 auto;
+        padding: 10px;
+        font-size: 13px;
+        .fomr-container {
+            width: 100%;
+            position: relative;
+            margin-bottom: 5px;
+        }
+        .ytd-link {
+            width: 100%;
+            padding: 5px 85px 5px 10px;
+            height: 30px;
+            box-sizing: border-box;
+        }
+        .ytd-submit {
+            position: absolute;
+            top: 0;
+            right: 0;
+            height: 30px;
+            width: 80px;
+        }
+    }
+    .panel-setting {
+        select {
+            margin-right: 10px;
+        }
+    }
+    .red-color {
+        color: #f00;
+        font-weight: bold !important;
+    }
+    
+    .green-color {
+        color: #008000;
+        font-weight: bold !important;
+    }
 }
